--- a/shard.yml
+++ b/shard.yml
@@ -4,7 +4,7 @@ version: 0.1.2
 authors:
   - Jonathan B. <greenbigfrog@gmail.com>
 
-crystal: 0.30.1
+crystal: 0.35.0
 
 license: MIT
 
@@ -16,6 +16,7 @@ dependencies:
     branch: add-bigdecimal
   raven:
     github: sija/raven.cr
+    branch: develop
 
 
 development_dependencies:
